welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:11: error: type mismatch;
 found   : Unit
 required: Int
  if (tea<=candy/2) {
  ^