welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
  if (tea>=5 && candy>=5) {
    return 1
  }
  if (tea<5 || candy<5) {
    return 0
  }
  if (tea>=2*candy) {
    return 2
  }
  if (tea<=candy/2) {
    return 2
  }
}